--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,10 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <div class="container">
+      <header>
+        <div class="compass-icon">
+        <img src="./views/compass.svg"/>
+       </div>
   </body>
 </html>
