--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,7 @@
         <div class="compass-icon">
         <img src="./views/compass.svg"/>
        </div>
+      </header>
+    </div>
   </body>
 </html>
